--- a/style_grid.css
+++ b/style_grid.css
@@ -103,6 +103,12 @@ img {
     font-size: 18px;
 }
 
+.carousel-item a {
+    text-decoration: none;
+    color: #000;
+    font-weight: bold;
+}
+
 .carousel-control {
     position: absolute;
     top: 50%;
